--- a/index.html
+++ b/index.html
@@ -78,6 +78,9 @@
         <h3>Let's learn to code, learn to be creative!</h3>
       </div>
       <span class="btn message">さっそく開発する</span>
+      <div>
+        <h2>Let's playmake!</h2>
+      </div>
     </div>
   </div>
   <footer>
