--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <h1>眼の病気のいろいろ</h1>
     　　<nav id="global_navi">
                 <ul>
-                    <li ><a href="eye-top.html">HOME</a></li>
+                    <li ><a href="index.html">HOME</a></li>
                     <li><a href="">白内障</a></li>
                     <li><a href="gloucoma.html">緑内障</a></li>
                     <li><a href="retinal.html">網膜</a></li>
@@ -33,8 +33,8 @@
    <h3>眼の構造とは？　眼の病気とは？</h3>  
       <p>人の目を見たときにどんなことを思いますか？目の色？大きさ？　目がどんな造りになっているか知ってますか？</p>
       <div id="main_visual">
-       <img src="image_eye/eye.jpg" alt="eye">
-       <img src="image_eye/eyea.jpg" alt="eye">
+       <img src="eye.jpg" alt="eye">
+       <img src="eyea.jpg" alt="eye">
      </div>
      
      <div id="main">
