--- a/cataract.html
+++ b/cataract.html
@@ -14,7 +14,7 @@
     <h1>白内障　Cataract</h1>
     　　<nav id="global_navi">
                 <ul>
-                    <li class="current"><a href="eye-top.html">HOME</a></li>
+                    <li class="current"><a href="index.html">HOME</a></li>
                     <li><a href="cataract.html">白内障</a></li>
                     <li><a href="gloucoma.html">緑内障</a></li>
                     <li><a href="retinal.html">網膜</a></li>
@@ -31,7 +31,7 @@
     
     <h2>白内障は水晶体が老化により濁った状態。誰にでも起こる。</h2>
     <figure>
-      <img src="image_eye/cataract01.jpg" alt="cat">
+      <img src="cataract01.jpg" alt="cat">
     </figure>
     
     <div id="wrapper" class="clearfix">
