--- a/cataract.html
+++ b/cataract.html
@@ -48,7 +48,7 @@
        <section>
          <h3>白内障の症状の進行</h3>
          <figure>
-           <img src="image_eye/cataract02.jpg" alt="cat2">
+           <img src="cataract02.jpg" alt="cat2">
          　<figcaption>進行すると黄色くなり、硬度も硬くなっていく。</figcaption>
          </figure>
        </section>
