--- a/retinal.html
+++ b/retinal.html
@@ -5,7 +5,7 @@
     <title>eye-pathology</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     
-    <link rel="stylesheet" href="original.css">
+    <link rel="stylesheet" href="stylesheet.css">
    
   </head>
   
