--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
 		  		<div class="content-area"> 
 		     		 <p>人の目を見たときにどんなことを思いますか？目の色？大きさ？　目がどんな造りになっているか知ってますか？</p>
 				      <div class="main_visual">
-				        <img src="image_eye/eye.jpg" alt="eye">
-				        <img src="image_eye/eyea.jpg" alt="eye">
+				        <img src="eye.jpg" alt="eye">
+				        <img src="eyea.jpg" alt="eye">
 		      		  </div>
 		      	</div>
 	     
