--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 	    	<nav class="global_navi">
 	                <ul>
 	                    <li ><a href="index.html">HOME</a></li>
-	                    <li><a href="">白内障</a></li>
+	                    <li><a href="cataract.html">白内障</a></li>
 	                    <li><a href="gloucoma.html">緑内障</a></li>
 	                    <li><a href="retinal.html">網膜</a></li>
 	                    <li><a href="choroidal.html">ぶどう膜</a></li>
