--- a/retinal.html
+++ b/retinal.html
@@ -51,7 +51,7 @@
 		            糖尿病三大合併症の（腎症、網膜症、抹消神経症）の一つ。<br>
 		            糖尿病の合併症として網膜症をはじめ、白内障、虹彩炎、調節障害、外眼筋麻痺などがある。
 		            <figure>
-		            <img src="image_eye/dr01.jpg" alt="dr1">
+		            <img src="dr01.jpg" alt="dr1">
 		          </figure>
 		          </p>
 		          </div>
@@ -67,7 +67,7 @@
 		            加齢による黄斑部の変化である軟性ドルーゼンや網膜色素上皮異常が前駆病変となる。
 		          </p>
 		          <figure>
-		            <img src="image_eye/amd01.jpg" alt="amd1">
+		            <img src="amd01.jpg" alt="amd1">
 		          </figure>
 		          </div>
 		      </section>
@@ -86,7 +86,7 @@
 		            ・網膜動静脈は細かくなる。黄斑部は最後まで侵されないが、末期には変性が及ぶ。乳頭は初期は正常であるが、末期には黄色調を呈する。境界鮮明で黄蝋色萎縮となる。
 		          </p>
 		          <figure>
-		            <img src="image_eye/rp01.jpg" alt="rp1">
+		            <img src="rp01.jpg" alt="rp1">
 		            <figcaption>↑網膜色素変性症の眼底。周辺部に黒色の色素斑がみられる。</figcaption>
 		          </figure>
 		          </div>
@@ -105,7 +105,7 @@
 		          </p>
 		           
 		          <figure>
-		            <img src="image_eye/csc.jpg" alt="csc">
+		            <img src="csc.jpg" alt="csc">
 		            <figcaption>左の上から見た写真だと分かりづらいが、右の断層像だと中心が膨れているのがよくわかる。</figcaption>
 		          </figure>
 		          </div>
