--- a/gloucoma.html
+++ b/gloucoma.html
@@ -32,7 +32,7 @@
     	<div class="content">
 		    <h2>緑内障は日本人の失明原因第1位</h2>
 		    <figure>
-		      <img src="image_eye/gla01.jpg" alt="gla">
+		      <img src="gla01.jpg" alt="gla">
 		    </figure>
 		    
 		    
@@ -60,7 +60,7 @@
 		      <div>
 		        <h3>緑内障の視野障害の進行</h3>
 		        <figure>
-		          <img src="image_eye/gla-va.jpg" alt="csc">
+		          <img src="gla-va.jpg" alt="csc">
 		          <figcaption>右眼でのゴールドマン視野検査の図。鼻側の視野から欠けだし、末期では中心や周辺が僅かに残る程度になる。</figcaption>
 		          </figure>
 		      </div>
