--- a/cataract.html
+++ b/cataract.html
@@ -32,7 +32,7 @@
     	<div class="content">
 		    <h2>白内障は水晶体が老化により濁った状態。誰にでも起こる。</h2>
 		    <figure>
-		      <img src="image_eye/cataract01.jpg" alt="cat">
+		      <img src="cataract01.jpg" alt="cat">
 		    </figure>
 		    
 		    <div id="wrapper" class="clearfix">	      
@@ -48,7 +48,7 @@
 		       <section>
 		         <h3>白内障の症状の進行</h3>
 		         <figure>
-		           <img src="image_eye/cataract02.jpg" alt="cat2">
+		           <img src="cataract02.jpg" alt="cat2">
 		         　<figcaption>進行すると黄色くなり、硬度も硬くなっていく。</figcaption>
 		         </figure>
 		       </section>
