--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <title>eye-pathology</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">    
     <link rel="stylesheet" href="stylesheet.css">
+    <link rel="stylesheet" href="responsive.css">  
   </head>
   
   <body>
