--- a/cataract.html
+++ b/cataract.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <title>eye-pathology</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">    
-    <link rel="stylesheet" href="stylesheet.css">   
+    <link rel="stylesheet" href="stylesheet.css"> 
+    <link rel="stylesheet" href="responsive.css">
   </head>
   
   <body>    
