--- a/retinal.html
+++ b/retinal.html
@@ -3,10 +3,9 @@
   <head>
     <meta charset="UTF-8">
     <title>eye-pathology</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    
+    <meta name="viewport" content="width=device-width, initial-scale=1">    
     <link rel="stylesheet" href="stylesheet.css">
-   
+    <link rel="stylesheet" href="responsive.css">
   </head>
   
   <body>
