--- a/kitchen.html
+++ b/kitchen.html
@@ -35,7 +35,7 @@
                         <p>
                             健やかな人生は健やかな食生活から<br>
                             上手に料理が作れるだけでなく、食べる人の人生をも健やかにしていきたい。<br>
-                            それが、TechAcademy KITCHENの思いです。
+                            それが私たちの思いです。
                         </p>
                     </section>
                     <section class="clearfix">
@@ -92,7 +92,7 @@
                     <li><a href="contact.html">お問い合わせ</a></li>
                 </ul>
             </div>
-            <small>&COPY 2019 TechAcademy Kitchen</small>
+            <small>&COPY 2019 IT Kitchen</small>
         </footer>
     </body>
 </html>
