--- a/kitchen.html
+++ b/kitchen.html
@@ -74,7 +74,7 @@
                     <h2>関連リンク</h2>
                     <ul>
                         <li>
-                            <a href="https://techacademy.jp/magazine/" target="_blank"><img src="images_kitchen/banner01.jpg" alt="ブログ"></a>
+                            <a href=""><img src="images_kitchen/banner01.jpg" alt="ブログ"></a>
                             <p>毎日季節の野菜を取り入れたレシピを公開中。</p>
                         </li>
                     </ul>
