--- a/kitchen.html
+++ b/kitchen.html
@@ -2,7 +2,7 @@
 <html lang="ja">
     <head>
         <meta charset="UTF-8">
-        <title>TechAcademy Kitchen</title>
+        <title>IT Kitchen</title>
         <link rel="stylesheet" href="kitchen.css">
     </head>
     <body>
@@ -11,11 +11,11 @@
             <nav id="global_navi">
                 <ul>
                     <li class="current"><a href="kitchen.html">HOME</a></li>
-                    <li><a href="course.html">講座案内</a></li>
-                    <li><a href="lesson.html">レッスン</a></li>
-                    <li><a href="gallery.html">ギャラリー</a></li>
-                    <li><a href="access.html">アクセス</a></li>
-                    <li><a href="contact.html">お問い合わせ</a></li>
+                    <li><a href="">講座案内</a></li>
+                    <li><a href="">レッスン</a></li>
+                    <li><a href="">ギャラリー</a></li>
+                    <li><a href="">アクセス</a></li>
+                    <li><a href="">お問い合わせ</a></li>
                 </ul>
             </nav>
         </header>
